<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyPhNumberActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_undraw_loading_frh4"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="30dp"
        android:alpha=".7"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/opt_head"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt_txt"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/gray"
        android:textSize="15dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="100dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/opt_enter">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/opt_verify"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>


</LinearLayout>